--- a/src/app/estadisticas/estadisticas-lista/estadisticas-lista.component.html
+++ b/src/app/estadisticas/estadisticas-lista/estadisticas-lista.component.html
@@ -2,24 +2,24 @@
   Listado de incidencias
 </p>
 
-<a [routerLink]="['/dash/incidencias/detalle']" class="button">Nueva incidencia</a> 
+<a [routerLink]="['/dash/incidencias/detalle']">Nueva incidencia</a> 
 
 <br>
 
-<div class="row cols-sm">
-  <table>
+<div>
+  <table class="table table-striped">
     <thead>
       <tr>
-        <th>#</th>
-        <th>Incidencia</th>
-        <th>Editar</th>        
+        <th scope="col">#</th>
+        <th scope="col">Incidencia</th>
+        <th scope="col">Editar</th>        
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of estadisticas; let i = index">
-        <td data-label="#">{{ i + 1 }}</td>
-        <td data-label="Incidencia">{{ item.nombre }}</td>
-        <td data-label="Editar"> <a [routerLink]="['/dash/incidencias/detalle', item._id]" class="button small tertiary">Editar</a></td>        
+        <th scope="row">{{ i + 1 }}</th>
+        <td>{{ item.nombre }}</td>
+        <td> <a [routerLink]="['/dash/incidencias/detalle', item._id]">Editar</a></td>        
       </tr>
     </tbody>
   </table>
