--- a/src/app/analisis/estadisticas-pla/estadisticas-pla.component.html
+++ b/src/app/analisis/estadisticas-pla/estadisticas-pla.component.html
@@ -1,7 +1,22 @@
-<p>
-ESTADISTICAS TOTALES PLAYA {{ lugar }} DE {{ municipio }}
-</p>
+<h5>
+ESTADISTICAS TOTALES PLAYA {{ lugar | uppercase }} DE {{ municipio | uppercase }}
+</h5>
 
-<div *ngFor="let estadistica of estadisticas">
-{{ estadistica._id }} - {{ estadistica.count }}
+<div class="row">
+<table class="table table-striped">
+        <thead>
+            <tr>
+            <th scope="col">#</th>            
+            <th scope="col">INCIDENCIA</th>
+            <th scope="col">VECES</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let estadistica of estadisticas; let i = index">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>{{ estadistica._id }}</td>
+            <td>{{ estadistica.count }}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
