--- a/src/app/informes-lim/resumen/resumen.component.html
+++ b/src/app/informes-lim/resumen/resumen.component.html
@@ -8,38 +8,38 @@
         <p>
           Informe diario por dia y municipio
         </p>
-        <div>
-          <label>Fecha</label>
-          <input type="date" name="fecha" placeholder="dia resumen" [(ngModel)]="fecha">         
+        <div class="form-group col-md-3">
+          <label for="fecha">Fecha</label>
+          <input id="fecha" type="date" name="fecha" placeholder="dia resumen" [(ngModel)]="fecha" class="form-control">         
         </div>
-        <div>
-          <label>Municipio</label>
-          <select name="municipio" [(ngModel)]="municipio">
+        <div class="form-group">
+          <label for="municipio">Municipio</label>
+          <select name="municipio" [(ngModel)]="municipio" class="form-control" id="municipio">
             <option value="Benidorm">Benidorm</option>
             <option value="Finestrat">Finestrat</option>    
           </select>
         </div>        
-        <button type="button" (click)="abreRes(fecha, municipio)">Abrir Informe Diario</button>
+        <button type="button" (click)="abreRes(fecha, municipio)" class="btn btn-primary">Abrir Informe Diario</button>
         <p>
             Informe mensual por dia, turno y playa
         </p>
-        <div>
-          <label>Playa</label>
-          <select name="lugar" [(ngModel)]="lugar">
+        <div class="form-group">
+          <label for="lugar">Playa</label>
+          <select name="lugar" [(ngModel)]="lugar" class="form-control" id="lugar">
             <option value="Levante y Calas">Levante y Calas</option>
             <option value="Poniente y Mal Pas">Poniente y Mal Pas</option>
             <option value="Finestrat">Finestrat</option>     
           </select>
         </div>  
-        <div>
-          <label>Turno</label>
-          <select name="turno" [(ngModel)]="turno">
+        <div class="form-group">
+          <label for="turno">Turno</label>
+          <select name="turno" [(ngModel)]="turno" class="form-control" id="turno">
             <option value="Mañana">Mañana</option>
             <option value="Tarde">Tarde</option>
             <option value="Noche">Noche</option>    
           </select>
         </div>                
-        <button type="button" (click)="abreMes(fecha, turno, lugar, municipio)">Abrir Informe Mensual</button>
+        <button type="button" (click)="abreMes(fecha, turno, lugar, municipio)" class="btn btn-primary">Abrir Informe Mensual</button>
       </div>      
     </div>
   </div>
