--- a/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
+++ b/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
@@ -1,44 +1,42 @@
 <p>
   Selecciona fecha para ver los partes
 </p>
-<button (click)="nuevoParte()">
-  Nuevo Parte Diario
-</button>
-<div>
-  <label>Selecciona fecha</label>
-  <input [(ngModel)]="fecha" type="date" (change)="actualizaLista()">
+<a [routerLink]="['detalle']">Nuevo parte</a> 
+<div class="form-group col-md-3">
+  <label for="fecha">Selecciona fecha</label>
+  <input id="fecha" [(ngModel)]="fecha" type="date" (change)="actualizaLista()" class="form-control">
 </div>
 <br>
-<div class="row cols-sm">
-  <table>
+<div>
+  <table class="table table-striped table-responsive-md">
     <thead>
       <tr>
-        <th>#</th>
-        <th>Playa</th>
-        <th>Operario</th>
-        <th>Turno</th>
-        <th>Tipo</th>           
-        <th>RSUM</th>   
-        <th>RSUC</th>  
-        <th>SELEC</th>         
-        <th>ALGT</th>  
-        <th>ALGP</th>          
-        <th>Editar</th>                               
+        <th scope="col">#</th>
+        <th scope="col">PLAYA</th>
+        <th scope="col">OPERARIO</th>
+        <th scope="col">TURNO</th>
+        <th scope="col">TIPO</th>           
+        <th scope="col">RSUM</th>   
+        <th scope="col">RSUC</th>  
+        <th scope="col">SELEC</th>         
+        <th scope="col">ALGT</th>  
+        <th scope="col">ALGP</th>          
+        <th scope="col">EDITAR</th>                               
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let parte of listaPartes; let i = index">
-        <td data-label="#">{{ i + 1 }}</td>        
-        <td data-label="Playa">{{ parte.lugar }}</td>
-        <td data-label="Operario">{{ parte.operario }}</td>
-        <td data-label="Turno">{{ parte.turno }}</td>
-        <td data-label="Tipo">{{ parte.tipo }}</td>
-        <td data-label="RSUM">{{ parte.pesos.rsu_manual }}</td>     
-        <td data-label="RSUC">{{ parte.pesos.rsu_criba }}</td> 
-        <td data-label="SEL">{{ parte.pesos.selectivo }}</td> 
-        <td data-label="ALGT">{{ parte.pesos.algas_teoricas }}</td>        
-        <td data-label="ALGP">{{ parte.pesos.algas_pesadas }}</td>                                           
-        <td data-label="Editar"><a [routerLink]="['/dash/limpieza/detalle', parte._id]" class="button small tertiary">
+        <th scope="row">{{ i + 1 }}</th>        
+        <td>{{ parte.lugar }}</td>
+        <td>{{ parte.operario }}</td>
+        <td>{{ parte.turno }}</td>
+        <td>{{ parte.tipo }}</td>
+        <td>{{ parte.pesos.rsu_manual }}</td>     
+        <td>{{ parte.pesos.rsu_criba }}</td> 
+        <td>{{ parte.pesos.selectivo }}</td> 
+        <td>{{ parte.pesos.algas_teoricas }}</td>        
+        <td>{{ parte.pesos.algas_pesadas }}</td>                                           
+        <td><a [routerLink]="['/dash/limpieza/detalle', parte._id]">
           Editar
         </a></td>        
       </tr>
