--- a/src/app/informes-lim/resumen-mes/resumen-mes.component.html
+++ b/src/app/informes-lim/resumen-mes/resumen-mes.component.html
@@ -4,8 +4,8 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th scope="col">Dia</th>
-        <th scope="col">Incidencia</th>
+        <th scope="col">DIA</th>
+        <th scope="col">INCIDENCIA</th>
       </tr>
     </thead>
     <tbody>
