--- a/src/app/estadisticas/estadisticas-detalle/estadisticas-detalle.component.html
+++ b/src/app/estadisticas/estadisticas-detalle/estadisticas-detalle.component.html
@@ -6,11 +6,11 @@
     <input
       type="text"
       placeholder="Introduce nombre"
-      name="nombre"
-      id="nombre"
+      name="estadistica"
+      id="estadistica"
       class="form-control"      
-      formControlName="nombre">  
-      <div *ngIf="estadisticasForm.controls['nombre'].hasError('required') && estadisticasForm.controls['nombre'].touched" class="card warning" class="alert alert-warning" role="warning">
+      formControlName="estadistica">  
+      <div *ngIf="estadisticasForm.controls['estadistica'].hasError('required') && estadisticasForm.controls['estadistica'].touched" class="card warning" class="alert alert-warning" role="warning">
           Campo nombre necesario
       </div>           
   </div>
