--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -10,6 +10,9 @@
                 <a class="nav-link" [routerLink]="['/dash/operarios']" routerLinkActive="active">Operarios</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/dash/asistencia']" routerLinkActive="active">Asistencia</a>
+            </li>            
+            <li class="nav-item">
                 <a class="nav-link" [routerLink]="['/dash/incidencias']" routerLinkActive="active">Incidencias</a>
             </li>
             <li class="nav-item">
