--- a/src/app/operarios/operarios-detalle/operarios-detalle.component.html
+++ b/src/app/operarios/operarios-detalle/operarios-detalle.component.html
@@ -50,6 +50,52 @@
       id="puesto"
       class="form-control">
   </div>
+  <div class="form-group row">
+    <div class="col-sm-2">Es</div>
+    <div class="col-sm-10">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="checkConductor" formControlName="conductor" name="conductor">
+        <label class="form-check-label" for="checkConductor">
+          Conductor
+        </label>
+      </div>
+    </div>
+  </div>    
+  <div class="form-group row">
+    <div class="col-sm-2">Situación actual</div>
+    <div class="col-sm-10">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" id="checkActivo" formControlName="activo" name="activo">
+        <label class="form-check-label" for="checkActivo">
+          Activo
+        </label>
+      </div>
+    </div>
+  </div>  
+  <div class="form-group">
+    <label for="ultima_alta">
+      Ultima alta
+    </label>
+    <input
+      type="date"
+      placeholder="Introduce fecha"
+      name="ultima_alta"
+      formControlName="ultima_alta"
+      id="ultima_alta"
+      class="form-control">
+  </div>
+  <div class="form-group">
+    <label for="ultima_baja">
+      Ultima baja
+    </label>
+    <input
+      type="date"
+      placeholder="Introduce fecha"
+      name="ultima_baja"
+      formControlName="ultima_baja"
+      id="ultima_baja"
+      class="form-control">
+  </div>    
   <div>
     <button type="submit" [disabled]="!operariosForm.valid" class="btn btn-success">Aceptar</button>
     <button type="button" (click)="onCancelar()" class="btn btn-warning">Cancelar</button>
