--- a/src/app/asistencia/control-as/control-as.component.html
+++ b/src/app/asistencia/control-as/control-as.component.html
@@ -1,4 +1,19 @@
 <p>
-  Menu de asistencia
+  Menu control de asistencia
 </p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/dash/asistencia/entrada']" routerLinkActive="active">Entrada</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/dash/asistencia/entrada']" routerLinkActive="active">Otro</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/dash/asistencia/entrada']" routerLinkActive="active">Mas</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
