--- a/src/app/asistencia/entrada-as/entrada-as.component.html
+++ b/src/app/asistencia/entrada-as/entrada-as.component.html
@@ -1,3 +1,31 @@
-<p>
-  entrada-as works!
-</p>
+<a class="nav-link" [routerLink]="['/dash/asistencia/entrada/1/1']" routerLinkActive="active">Detalle</a>
+<div class="form-group col-md-3">
+  <label for="fecha">Selecciona fecha</label>
+  <input id="fecha" [(ngModel)]="fecha" type="date" class="form-control">
+</div>
+<div class="row">
+  <div class="col">
+<div>
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Operario</th>
+        <th scope="col">Editar</th>        
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of operarios; let i = index">
+        <th scope="row">{{ i + 1 }}</th>
+        <td>{{ item.nombre }}</td>
+        <td> <a [routerLink]="['/dash/asistencia/entrada', fecha, item._id]">Editar</a></td>        
+      </tr>
+    </tbody>
+  </table>
+</div>
+</div>
+<div class="col">
+<router-outlet></router-outlet>
+</div>
+</div>
+
